Update Лабораторная работа №3. Sequence.md

--- a/Lab 3 Sequence/Лабораторная работа №3. Sequence.md
+++ b/Lab 3 Sequence/Лабораторная работа №3. Sequence.md
@@ -4,7 +4,7 @@
 
 ### Прецедент "Создать игру"
 ---
-![Logo](https://github.com/NEEEEEERO/Igra-kosti-21-/blob/main/Lab%203%20Sequence/images/image%201.png?raw=true)
+![Logo](https://github.com/NEEEEEERO/Igra-kosti-21-/blob/main/Lab%203%20Sequence/images/image%201%20(correct).png?raw=true)
 
 | Операция | Открытие меню выбора количества игроков |
 |----------|----------|
@@ -27,7 +27,7 @@
 
 ### Прецедент "Играть"
 ---
-![Logo](https://github.com/NEEEEEERO/Igra-kosti-21-/blob/main/Lab%203%20Sequence/images/image%202.png?raw=true)
+![Logo](https://github.com/NEEEEEERO/Igra-kosti-21-/blob/main/Lab%203%20Sequence/images/image%202%20(correct).png?raw=true)
 | Операция | Игрок учавствует в игре |
 |----------|----------|
 | Ссылки    | Прецедент: Играть   |
@@ -36,7 +36,7 @@
 
 ### Прецедент "Сделать ход"
 ---
-![Logo](https://github.com/NEEEEEERO/Igra-kosti-21-/blob/main/Lab%203%20Sequence/images/image%203.jpg?raw=true)
+![Logo](https://github.com/NEEEEEERO/Igra-kosti-21-/blob/main/Lab%203%20Sequence/images/image%203%20(correct).png?raw=true)
 | Операция | Игрок выполняет ход |
 |----------|----------|
 | Ссылки    | Прецедент: Сделать ход   |
@@ -45,7 +45,7 @@
 
 ### Прецедент "Бросить кость еще раз"
 ---
-![Logo](https://raw.githubusercontent.com/NEEEEEERO/Igra-kosti-21-/main/Lab%203%20Sequence/images/image%204.png)
+![Logo](https://github.com/NEEEEEERO/Igra-kosti-21-/blob/main/Lab%203%20Sequence/images/image%204%20(correct).png?raw=true)
 | Операция | Игрок бросает кость снова |
 |----------|----------|
 | Ссылки    | Прецедент: Бросить кость еще раз   |
@@ -54,7 +54,7 @@
 
 ### Прецедент "Остановить и передать ход"
 ---
-![Logo](https://github.com/NEEEEEERO/Igra-kosti-21-/blob/main/Lab%203%20Sequence/images/image%205.png?raw=true)
+![Logo](https://github.com/NEEEEEERO/Igra-kosti-21-/blob/main/Lab%203%20Sequence/images/image%205%20(correct).png?raw=true)
 | Операция | Игрок заканчивает свой ход и передает его следующему игроку |
 |----------|----------|
 | Ссылки    | Прецедент: Остановиться и передать ход   |
@@ -63,7 +63,7 @@
 
 ### Прецедент "Выйти из игры"
 ---
-![Logo](https://github.com/NEEEEEERO/Igra-kosti-21-/blob/main/Lab%203%20Sequence/images/image%206.png?raw=true)
+![Logo](https://github.com/NEEEEEERO/Igra-kosti-21-/blob/main/Lab%203%20Sequence/images/image%206%20(correct).png?raw=true)
 | Операция | Игрок нажимает на кнопку "Выйти из игры" |
 |----------|----------|
 | Ссылки    | Прецедент: Выйти из игры   |
