Update Лабораторная работа №4.Sequence System.md

--- a/Lab 4/Лабораторная работа №4.Sequence System.md
+++ b/Lab 4/Лабораторная работа №4.Sequence System.md
@@ -2,16 +2,16 @@
 ## Игра в кости (21)
 ***
 ### Классы
-**Player** — класс игрока и ботов. Содержит основную игровую информацию и методы для взаимодействия с игрой.
-**Game** — класс, который содержит основную информацию об игре и методы, определяющие процесс игры.
-**Round** — класс, определяющий ходы самой игры по раундам (победа, ничья, новый)
+**Player** — класс игрока. Содержит основную игровую информацию об игроке, участник игры.
+**Form1** — класс, который инициализирует объекты игроков, а также формирует интерфейс главного меню с заполнением лобби.
+**GamePlayForm** — класс, который содержит игровое поле, игроков и инициализирует процесс игры.
 **Dice** — класс кости, которое игроки бросают каждый ход. Содержит методы броска и получения значения броска.
-**Bank** — класс, являющийся банком в игре. Своего рода хранилище игровых фишек.
+**Bank** — класс, являющийся банком в игре. Своего рода хранилище игровых фишек (ставки).
 ***
 
 ### 1. Прецедент "Создать игру"
 ---
-![Logo](https://github.com/NEEEEEERO/Igra-kosti-21-/blob/main/Lab%204/Sequence%201%20(correct).png?raw=true)
+![Logo](https://github.com/NEEEEEERO/Igra-kosti-21-/blob/main/Lab%204/CreateGame.drawio.png?raw=true)
 
 | Операция | MenuGameSettings() |
 |----------|----------|
@@ -25,46 +25,28 @@
 | Предусловие    | playersCount != null  |
 | Постусловие    | Игрок нажал кнопку "Создать" и CreateGame(playersCount) создает новую игру с учетом принятых параметров|
 
-**Альтернативный вариант**
-| Операция | CreateGame(null) ErrorMessage *(не соблюдено условие запуска)* |
-|----------|----------|
-| Ссылки    | Прецедент: Создать игру   |
-| Предусловие    | playersCount == null  |
-| Постусловие    | CreateGame() возвращает ErrorMessage "Выберите количество игроков" на экран пользователя|
-
 ### 2. Прецедент "Сделать ход"
 ---
-![Logo](https://github.com/NEEEEEERO/Igra-kosti-21-/blob/main/Lab%204/Sequence%203.png?raw=true)
+![Logo](https://github.com/NEEEEEERO/Igra-kosti-21-/blob/main/Lab%204/DoARoll.drawio.png?raw=true)
 
-| Операция | RollDice() (Класса Player)|
+| Операция | ButtonRoll_Click(object sender, EventArgs e) |
 |----------|----------|
 | Ссылки    | Прецедент: Сделать ход   |
 | Предусловие    | Игрок нажимает кнопку "Ход" |
-| Постусловие    | Система отправляет запрос на бросок кубика |
+| Постусловие    | Система принимает запрос на бросок кубика, кубик бросается, система получает значение броска, высчитывает итоговую сумму бросков игрока |
 
-| Операция | RollDice() (Класса Dice) |
+**Альтернативный вариант**
+| Операция | ButtonRoll_Click(object sender, EventArgs e) *(Сумма значений броска > 21, игрок проигрывает в раунде автоматически)* |
 |----------|----------|
-| Ссылки    | Прецедент: Сделать ход   |
-| Предусловие    | Был принят запрос на бросок кубика |
-| Постусловие    | Кубик бросается |
-
-| Операция | GetNumber() |
-|----------|----------|
-| Ссылки    | Прецедент: Сделать ход   |
-| Предусловие    | Кубил был брошен |
-| Постусловие    | Система получает значение броса |
-
-| Операция | CalculateScore() |
-|----------|----------|
-| Ссылки    | Прецедент: Сделать ход   |
-| Предусловие    | Было получено значение кубика |
-| Постусловие    | Система высчитывает итоговую сумму бросков игрока |
+| Ссылки    | Прецедент: Создать игру   |
+| Предусловие    | dice.TotalValues > 21  |
+| Постусловие    | Игрок проигрывает и система передает ход следующему игроку автоматически|
 
 
 ### 3. Прецедент "Остановить и передать ход"
 ---
-![Logo](https://github.com/NEEEEEERO/Igra-kosti-21-/blob/main/Lab%204/Sequence%205.png?raw=true)
-| Операция | StepSkip() && MoveStepToNext()|
+![Logo](https://github.com/NEEEEEERO/Igra-kosti-21-/blob/main/Lab%204/Skip.drawio.png?raw=true)
+| Операция | ButtonSkip_Click(object sender, EventArgs e) |
 |----------|----------|
 | Ссылки    | Прецедент: Остановиться и передать ход   |
 | Предусловие    | Игрок нажал кнопку "Передать ход" |
@@ -72,8 +54,8 @@
 
 ### 4. Прецедент "Выйти из игры"
 ---
-![Logo](https://github.com/NEEEEEERO/Igra-kosti-21-/blob/main/Lab%204/Sequence%206.png?raw=true)
-| Операция | CloseProgramm() |
+![Logo](https://github.com/NEEEEEERO/Igra-kosti-21-/blob/main/Lab%204/Exit.drawio.png?raw=true)
+| Операция | ExitButton_Click(object sender, EventArgs e) |
 |----------|----------|
 | Ссылки    | Прецедент: Выйти из игры   |
 | Предусловие    | Игрок находится в главном меню |
